correct spammer stats + margin hunt navbar + remove force on hunt collapse episode

--- a/hunts/static/css/hunt_base.css
+++ b/hunts/static/css/hunt_base.css
@@ -27,7 +27,7 @@ main.split-hor {
 }
 
 #sidebar{
-  max-height:calc(100% - 277px);
+  max-height:calc(100% - 285px);
   overflow:auto;
 }
 
